Created starter code for Gallery.html

--- a/htmlStructureSolutions/index.html
+++ b/htmlStructureSolutions/index.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>ACM UCSD Meme Generator</title>
+        <title>Meme Generator</title>
         <!-- Let's link the main.css to this index.html file -->
         <link rel="stylesheet" href="main.css" type="text/css"/>
     </head>
