Added the keyword TODO in comments in order to explicitly show what needs to be done.

--- a/htmlStructure/gallery.html
+++ b/htmlStructure/gallery.html
@@ -8,11 +8,7 @@
         <div id="navbar">
             <h1>ACM UCSD Meme Gen</h1>
             <!-- Create a div with the id, "navlinks", which will contain two links with names called Generator and Gallery. Also
-                 name the class of these links "links". -->
-            <div id="navlinks">
-                <a class="links" href="index.html">Generator</a>
-                <a class="links" href="gallery.html">Gallery</a>
-            </div>
+                 name the class of these links "links". Copy & paste from index.html.-->
         </div>
         <div id="content">
             <h2>Meme Gallery</h2>
