--- a/htmlStructure/index.html
+++ b/htmlStructure/index.html
@@ -2,19 +2,20 @@
     <head>
         <title>ACM UCSD Meme Generator</title>
         <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Nunito" />
-        <!-- Let's link the main.css to this index.html file -->
+        <!-- TODO: Link the main.css to this index.html file. -->
     </head>
     <body>
         <div id="navbar">
             <h1>ACM UCSD Meme Gen</h1>
-            <!-- Create a div with the id, "navlinks", which will contain two links with names called Generator and Gallery. Also
+            <!-- TODO: Create a div with the id, "navlinks", which will contain two links with names called Generator and Gallery. Also
                  name the class of these links "links". -->
         </div>
         <div id="content">
             <h2>Meme Generator</h2>
-            <!-- Put the badmeme.jpeg image (or any image) into the line below. -->
+            <!-- TODO: Put the badmeme.jpeg image (or any image) into the line below. -->
             <div class="textboxes">
-            <!-- Create 4 textboxes, each of which will have the following headings, chronologically. -->
+            <!-- TODO: Create 4 textboxes, each of which will have the following headings (h3), chronologically: 
+                "text1", "text2", "text3", "Created By?" -->
             </div>
             <button class="button" type="button">Submit meme!</button>
         </div>
