--- a/htmlStructure/gallery.html
+++ b/htmlStructure/gallery.html
@@ -18,12 +18,12 @@
             <h2>Meme Gallery</h2>
             <div class="memes">
                 <div class="meme-card">
-                    <img src="../assets/images/badmeme.jpeg"/>
+                    <img src="./images/badmeme.jpeg"/>
                     <p>Daniel Truong</p>
                     <button type="button">👍</button>
                 </div>
                 <div class="meme-card">
-                    <img src="../assets/images/aight-imma-out.png"/>
+                    <img src="./images/aight-imma-out.png"/>
                     <p>Daniel Truong</p>
                     <button type="button">👍</button>
                 </div>
