--- a/htmlStructure/index.html
+++ b/htmlStructure/index.html
@@ -17,7 +17,7 @@
         <div id="content">
             <h2>Meme Generator</h2>
             <!-- Put the badmeme.jpeg image (or any image) into the line below. -->
-            <img class="memeImg" src="../assets/images/badmeme.jpeg" />
+            <img class="memeImg" src="./images/badmeme.jpeg" />
             <div class="textboxes">
             <!-- Create 4 textboxes, each of which will have the following headings, chronologically. -->
                 <h3>Text1</h3>
