--- a/htmlStructure/index.html
+++ b/htmlStructure/index.html
@@ -15,7 +15,7 @@
             <!-- TODO: Put the badmeme.jpeg image (or any image) into the line below. -->
             <div class="textboxes">
             <!-- TODO: Create 4 textboxes, each of which will have the following headings (h3), chronologically: 
-                "text1", "text2", "text3", "Created By?" -->
+                "text1", "text2", "text3", "Created By?" as well as a textarea. -->
             </div>
             <button class="button" type="button">Submit meme!</button>
         </div>
